--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
         <groupId>com.enda</groupId>
         <artifactId>itoken-dependencies</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../itoken-dependencies/pom.xml</relativePath>
     </parent>
 
     <artifactId>itoken-eureka</artifactId>
@@ -56,9 +55,23 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.enda.itokenEuraka.EurekaApplication</mainClass>
+                    <mainClass>com.enda.eureka.EurekaApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>Nexus</id>
+            <name>Nexus Repository</name>
+            <url>http://172.28.7.36:8081/repository/maven-public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
