--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.1"
 services:
-  itoken-config:
+  itoken-eureka:
     restart: always
     image: itoken-eureka
     container_name: itoken-eureka
