--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     networks:
       - eureka-net
     environment:
-      - spring.profiles.active=itoken-eureka-1
+      - SPRING_PROFILES_ACTIVE=itoken-eureka-1
   itoken-eureka-2:
     restart: always
     image: itoken-eureka
@@ -21,7 +21,7 @@ services:
     networks:
       - eureka-net
     environment:
-      - spring.profiles.active=itoken-eureka-2
+      - SPRING_PROFILES_ACTIVE=itoken-eureka-2
   itoken-eureka-3:
     restart: always
     image: itoken-eureka
@@ -32,7 +32,7 @@ services:
     networks:
       - eureka-net
     environment:
-      - spring.profiles.active=itoken-eureka-3
+      - SPRING_PROFILES_ACTIVE=itoken-eureka-3
 
 networks:
   eureka-net:
