--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,4 +4,4 @@ spring:
       uri: http://172.28.7.47:8888
       name: itoken-eureka
       label: master
-      profile: dev
+      profile: ${ACTIVE_PROFILE:dev}
