--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <!-- Spring Cloud End -->
+             
+        <!-- 获取IP -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
