--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     restart: always
     image: itoken-eureka
     container_name: itoken-eureka-1
+    host: 172.28.7.46
     ports:
       - 8761:8761
     networks:
@@ -15,6 +16,7 @@ services:
     restart: always
     image: itoken-eureka
     container_name: itoken-eureka-2
+    host: 172.28.7.46
     ports:
       - 8861:8861
     networks:
@@ -26,6 +28,7 @@ services:
     restart: always
     image: itoken-eureka
     container_name: itoken-eureka-3
+    host: 172.28.7.46
     ports:
       - 8961:8961
     networks:
